--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
     <main role="main">
        <%= render 'layouts/messages' %>
        <%= yield %>
+       <div id="form-place" class="reveal-modal" data-reveal>
+       </div>
     </main>
     <%# Foundation 5 won't work when application.js is included in HEAD %>
     <%= javascript_include_tag "application" %>
