++GOOD++ Auth through JS works now.
Signed-off-by: Alexey Korolev <akorolex@gmail.com>

--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -4,8 +4,8 @@
   <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:role => 'form' }, :remote => true) do |f| %>
 
 
-  <%= f.error_notification %>
-  <%= display_base_errors resource %>
+  <%#= f.error_notification %>
+  <%#= display_base_errors resource %>
   <%= f.input :name, :autofocus => true %>
   <%= f.input :email, :required => true %>
   <%= f.input :password, :required => true %>
@@ -21,7 +21,7 @@
     <p> Save time to sign up by using your Facebook account </p>
 
     <%- resource_class.omniauth_providers.each do |provider| %>
-      <%= link_to image_tag("#{provider.to_s.titleize}.png"), omniauth_authorize_path(resource_name, provider) %><br />
+      <%= link_to image_tag("#{provider.to_s.titleize}.jpeg"), omniauth_authorize_path(resource_name, provider) %><br />
     <% end -%>
   <% end -%>
 </div>
