--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -12,4 +12,6 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Users', users_path %></li>
   <%= image_tag current_user.profile.avatar.url(:thumb) %>
+  <li><%= link_to 'Profile', profiles_edit_path %></li>
+
 <% end %>
