--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Profiles#edit</h1>
-<p>Find me in app/views/profiles/edit.html.erb</p>
-<%= simple_form_for @profile, :url => { :action => "update" } do |f| %>
+<h1>Profile</h1>
+<%= simple_form_for @profile do |f| %>
   <%= f.file_field :avatar %>
   <%= f.input_field :location %>
   <%= f.input :birthday, as: :date %>
