REstrucured fileds a bit. Unfortunately nested attributes are not working. So need to fix this
Signed-off-by:  <>

--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -6,7 +6,11 @@
 
   <%#= f.error_notification %>
   <%#= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
+
+  <%= simple_fields_for :profile do |profile_fields| %>
+    <%= profile_fields.input :name , :autofocus => true, :required => true %>
+    <%= profile_fields.input :user_id, input_html: {value: resource.id}, as: :hidden %>
+  <% end %>
   <%= f.input :email, :required => true %>
   <%= f.input :password, :required => true %>
   <%= f.input :password_confirmation, :required => true %>
