--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,20 +1,12 @@
 <%= simple_form_for @profile do |f| %>
-  <h1>Profile</h1>
-
-<div class="row">
+  <%= field_set_tag 'Your details' do %>
     <%= f.input :name, :wrapper => :label_hor %>
-  
     <%= f.input :about, as: :text, placeholder: 'Tell us about yourself',:wrapper => :label_hor %>
-    <%= f.input :birthday, as: :date, start_year: Date.today.year - 60,
-                              end_year: Date.today.year - 12, :wrapper => :label_hor %>
-<div class="row">
-  <div class="large-8 columns" >
+    <%= f.input :birthday,  as: :string, start_year: Time.now.year - 90, end_year: Time.now.year - 8, :input_html => { :maxlength => 14, :"data-mask" => "999-999-9999" },  :wrapper => :label_hor %>
+  
     <%= f.file_field :avatar %>
-  </div>
-  <div class="large-4 columns" >
     <%= image_tag @profile.avatar.url(:medium), id: "previewHolder", height: '200', width: '200', alt: 'avatar', align: "right" %>
-  </div>
-</div>
+  <% end %>
   <%= f.submit 'Save' %>
 
 <% end %>
