--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,6 +7,10 @@
   -><%= link_to entry, navlink %>
 <% end %>
 
+<% navigate_categories(@parent_category.id).each do |entry| %>
+  <%= 	link_to entry[:name],[categories_path, entry[:path]].join('/') %>
+<% end %>
+ 
 
 <table>
   <thead>
