--- a/app/views/categories/_index.html.erb
+++ b/app/views/categories/_index.html.erb
@@ -1,19 +1,10 @@
 <h1>Listing categories</h1>
 
-<ul class="breadcrumbs">
-  <li><%= link_to "Categories", categories_path %></li>
-  <% navigate_categories(@parent_category.id).each do |entry| %>
-    <li><%= link_to entry[:name],[categories_path, entry[:path]].join('/') %></li>
-  <% end %>
-</ul> 
-
-<ul class="button-group round">
-  <% @categories.each do |category| %>
+  <ul class="button-group round">
+  <% top_categories.each do |category| %>
     <li><%= link_to category.name, category, :class=>"small button secondary"%></li>
   <% end %>
-</ul>
-
-
+  </ul>
 <% if can? :create, Category %>
 <table>
   <thead>
@@ -33,15 +24,15 @@
         <td><%= category.name %></td>
         <td><%= category.slug %></td>
         <td><%= category.parent_id %></td>
-        <td><%= params[:category] %></td>
-        <td><%= category.friendly_id%></td>
-        <td><%= link_to 'Show', [@parent_category.friendly_id, category.friendly_id].join('/') %></td>
+        <td><%= link_to 'Show', category	 %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
 <br>
-<%= link_to 'New Category', new_category_path(:category=> {:parent_id => @parent_category.id}) %>
+
+<%= link_to 'New Category', new_category_path %>
 <% end %>
