--- a/app/views/lots/_form.html.erb
+++ b/app/views/lots/_form.html.erb
@@ -22,7 +22,13 @@
     <%= f.input :keywords %>
     <%#= f.input :status %>
 
-    <%= f.association :category, collection: Category.where(parent_id:nil)%>
+    <%#= f.association :category, collection: Category.where(parent_id:nil)%>
+    <% for i in 0..CategoriesController::LVL_MASK.length %>
+      <%= f.input "sub_category_lvl#{i}", input_html: {size:"3"}, :as => :select, label:false  do %>
+        <% f.select "sub_category_lvl#{i}", @lot.send("sub_category_lvl#{i}")%>
+      <% end %>
+    <% end %>
+
     <%#= f.association :user %>
   </div>
 
