COrrected CSS a bit
Signed-off-by:  <akorolex>

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -4,7 +4,12 @@ $reveal-modal-padding: 0px !default;
 $reveal-modal-bg: #F2F2F2 !default;
 
 @import "foundation";
-
+textarea {
+  height:auto;
+}
+.required label {
+    font-weight: bold;
+}
 // override for the 'Home' navigation link
 .top-bar .name {
   font-size: rem-calc(13);
