--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -10,6 +10,11 @@ textarea {
 .required label {
     font-weight: bold;
 }
+
+.boolean label {
+  padding: 0 0;
+}
+
 // override for the 'Home' navigation link
 .top-bar .name {
   font-size: rem-calc(13);
