--- a/app/views/lots/_form.html.erb
+++ b/app/views/lots/_form.html.erb
@@ -2,10 +2,10 @@
   <%= f.error_notification %>
   <%= action_name %>
   <div class="form-inputs">
-    <%= f.input :title, required: true, label: "Title", placeholder: "Maximum lot title size is 50 characters",  input_html: {:maxlength => 50} %>
+    <%= f.input :title, help: true, required: true, label: "Title", placeholder: "Maximum lot title size is 50 characters",  input_html: {:maxlength => 50} %>
     <%= f.input :description, required: true, placeholder: "Short description for a whole lot", input_html: {rows: 8 } %>
     <%= f.input :end_date, required: true, placeholder: "Last date to book orders, maximum 90 days", :input_html => { :id => 'datetimepicker' }, as: :string %>
-    <%= f.input :prepay, placeholder: "Prepay required in %" %>	
+    <%= f.input :prepay, placeholder: "Prepay required in %" %>
     <%= f.input :fee, placeholder: "Organiser fee in %" %>
     <%= f.input :min_order, label: "Minimum sum", placeholder: "Minimum sum for all orders in NZD" %>
     <%= f.input :condition, required: true, label: "Lot conditions",placeholder: "Lot conditions (payment, refund, delivery, etc)", input_html: {rows: 4 } %>
@@ -58,7 +58,15 @@
 
 <div>
 <%= fa_icon "question-circle 2x" %>
+<%= link_to :categories, :class =>"question-circle 2x" %>
 </div>
+
+
+<%= link_to(:lots, :method=>:delete) do %>
+   <%= fa_icon "question-circle lg" %>
+<% end %>
+
+
 
 
 
