--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
        </div>
 
 
+<a href="#" class="button radius social-login"> <i class="fa fa-facebook fa-lg"></i> &nbsp; Connect with Facebook</a>
+
 <div class="row" data-match-height>
   <div data-height-watch class="large-3 columns" style="background: pink;">
     <p>Some text...</p>
