--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,10 @@
     <main role="main">
        <%= render 'layouts/messages' %>
        <%= yield %>
-       <div id="form-place" class="reveal-modal small" data-reveal>
+       <div id="form-place" class="reveal-modal tiny" data-reveal>
        </div>
 
 
-<a href="#" class="button radius social-login"> <i class="fa fa-facebook fa-lg"></i> &nbsp; Connect with Facebook</a>
 
 <div class="row" data-match-height>
   <div data-height-watch class="large-3 columns" style="background: pink;">
