--- a/app/views/lots/_form.html.erb
+++ b/app/views/lots/_form.html.erb
@@ -5,9 +5,9 @@
     <%= f.input :title, help: true, required: true, placeholder: "Maximum lot title size is 50 characters",  input_html: {:maxlength => 50} %>
     <%= f.input :description, required: true, placeholder: "Short description for a whole lot", input_html: {rows: 8 } %>
     <%= f.input :end_date, help: true, required: true, label: "Expire date", placeholder: "Last date to book orders, maximum 90 days", :input_html => { :id => 'datetimepicker', value: time_format(@lot.end_date) }, as: :string %>
-    <%= f.input :prepay, placeholder: "Prepay required in %" %>
-    <%= f.input :fee, placeholder: "Organiser fee in %" %>
-    <%= f.input :min_order, label: "Required sum", placeholder: "Sum required to activate the lot in NZD" %>
+    <%= f.input :prepay, prefix: "%", wrapper: :label_prefix_input %>
+    <%= f.input :fee, label: "Organiser fee", prefix: "%", wrapper: :label_prefix_input %>
+    <%= f.input :min_order, label: "Activation sum", prefix: "$", wrapper: :label_prefix_input %>
 
     <%= f.input :condition, required: true, label: "Lot conditions",placeholder: "Lot conditions (payment, refund, delivery, etc)", input_html: {rows: 4 } %>
     <%= f.input :source, label: "Supplier", placeholder: "Link to a supplier's web site" %>
@@ -22,7 +22,7 @@
         <%= f.label (i == 1) ? :shipping : " " %>
       <% end %>
       <%= content_tag :div, class: "small-2 columns" do %>
-        <%= f.input "postage_val#{i}", placeholder: "Cost in NZD", wrapper: :no_divs_labels %>
+        <%= f.input "postage_val#{i}", prefix: "$", wrapper: :prefix_input %>
       <% end %>
       <%= content_tag :div, class: "small-8	columns" do %>
         <%= f.input "postage_info#{i}", placeholder: "Details", wrapper: :no_divs_labels %>
